getBracketById api and swagger
